trunk/Archive2/4f/8a62a40bf57fad/output
initialisation
copy initialisation
initialisation
-------- now try assigning to a ----------
main.cpp:22:7: error: overload resolution selected deleted operator '='
    a = 5678 ; // *** error *** can't assign to a, assignment is explicitly deleted
    ~ ^ ~~~~
main.cpp:7:8: note: candidate function has been explicitly deleted
    A& operator= ( const A& that ) = delete ;
       ^
1 error generated.
